Removed compile time dependency on log4j